--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="MN.jfif" alt="Profile Picture">
+					<img class="profile-pic" src="CA.jfif" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Makana Nyaoga</p>
-					<p class="text-title-company">Senior Associate</p>
+					<p class="text-name">Chris Allen</p>
+					<p class="text-title-company">Associate</p>
 					<p class="text-title-company">Alterra Capital Partners</p>
 				</div>
 				<div class="col">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:mnyaoga@alterracapital.com">
+		<a href="mailto:callen@alterracapital.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">mnyaoga@alterracapital.com</p>
+						<p class="text-detail">callen@alterracapital.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+254792651000">
+		<a href="tel:+27718699813">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+254) 792 651000</p>
+						<p class="text-detail">(+27) 71 869 9813</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/9+West/@-1.2618602,36.8016555,17z/data=!3m1!4b1!4m5!3m4!1s0x182f1714c84c7fb1:0x3f8d818a384a0343!8m2!3d-1.2618602!4d36.8038495">
+		<a href="https://www.google.com/maps/place/3+Melrose+Blvd,+Birnam,+Johannesburg,+2196,+South+Africa/@-26.1352334,28.0661812,17z/data=!3m1!4b1!4m5!3m4!1s0x1e950d1dcbc8f5c5:0x26c279220c3f0166!8m2!3d-26.1352334!4d28.0683752">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">9 West, 9th Floor | Ring Road, Parklands | Nairobi, Kenya</p>
+						<p class="text-detail">1st Floor, 3 Melrose Boulevard | Melrose Arch, Melrose North | Johannesburg, South Africa</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
